@@ -17,6 +17,7 @@ Workbook 1.1
   - "DefaultPageSize" option in Workbook.ini
   - "AutosaveInterval" option in Workbook.ini (milliseconds, set to 0 to turn off)
   - tempfile and autosave support for multiple instances of workbook
+  - Added PREVIEW_BUILD compile flag that shows the status and build date of an unofficial "preview build"
 
   bug fixes
   - stop application closing aberrantly when screen annotation form is closed
